@startuml

title __DOMAIN's Class Diagram__\n

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class HousesModel {
          - houseName : String
          - tagLines : String
          - members : List<Member>
          - weapons : List<Weapon>
          - additionalProperties : Map<String, Object>
          + getHouseName()
          + setHouseName()
          + getTagLines()
          + setTagLines()
          + getMembers()
          + setMembers()
          + getWeapons()
          + setWeapons()
          + getAdditionalProperties()
          + setAdditionalProperty()
          + toString()
          + clone()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Member {
          - name : String
          - strength : Integer
          - additionalProperties : Map<String, Object>
          + getName()
          + setName()
          + getStrength()
          + setStrength()
          + getAdditionalProperties()
          + setAdditionalProperty()
          + toString()
          + clone()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      enum PlayerLevel {
        BEGINNER
        INTERMEDIATE
        ADVANCED
        PROFESSIONAL
        points
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class PlayerProfile {
          - playerName : String
          - wins : Integer
          - lost : Integer
          - ties : Integer
          - playerLevel : String
          - playerPoints : Integer
          + updateWins()
          + updateLostGames()
          + updateTies()
          + getPlayerName()
          + setPlayerName()
          + getWins()
          + setWins()
          + getLost()
          + setLost()
          + getPlayerLevel()
          + setPlayerLevel()
          + getPlayerPoints()
          + setPlayerPoints()
          + getTies()
          + setTies()
          + clone()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Session {
          - selectedWeapons : List<Weapon>
          - enemyWeapons : List<Weapon>
          - isCurrentGameOver : Boolean
          - currentStage : Integer
          - updateStagePostCommand : Boolean
          {static} - session : Session
          - Session()
          {static} + getInstance()
          + getUpdateStagePostCommand()
          + setUpdateStagePostCommand()
          + clearSession()
          + getPlayerProfile()
          + setPlayerProfile()
          + getSelected()
          + setSelected()
          + getEnemy()
          + setEnemy()
          + getSelectedWeapons()
          + setSelectedWeapons()
          + getEnemyWeapons()
          + setEnemyWeapons()
          + getSelectedHouse()
          + setSelectedHouse()
          + getEnemyHouse()
          + setEnemyHouse()
          + getCurrentGameOver()
          + setCurrentGameOver()
          + getCurrentStage()
          + setCurrentStage()
      }
    }
  }
  

  package com.thrones.of.game {
    package com.thrones.of.game.domain {
      class Weapon {
          - name : String
          - strength : Integer
          - additionalProperties : Map<String, Object>
          + getName()
          + setName()
          + getStrength()
          + setStrength()
          + getAdditionalProperties()
          + setAdditionalProperty()
          + toString()
          + clone()
      }
    }
  }
  

  HousesModel -up-|> Cloneable
  HousesModel -up-|> Serializable
  Member -up-|> Cloneable
  Member -up-|> Serializable
  PlayerProfile -up-|> Serializable
  PlayerProfile -up-|> Cloneable
  Session -up-|> Serializable
  Session o-- PlayerProfile : playerProfile
  Session o-- Member : selected
  Session o-- Member : enemy
  Session o-- HousesModel : selectedHouse
  Session o-- HousesModel : enemyHouse
  Weapon -up-|> Cloneable
  Weapon -up-|> Serializable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
